tests/paczka2/big_fuzzy/71384742.err
Error in line 1: jpWp9YJy7RN A51 15,6
Error in line 3: jpWp9YJy7RN S320 94,7
Error in line 6: YkK5pll A637 53,7
Error in line 18: ZLBz11a60dF A637 -2,1
Error in line 8: YkK5pll A51 60,3
Error in line 23: H3Cv46q A637 83,5
Error in line 28: ZLBz11a60dF A637 37,6
Error in line 51: jpWp9YJy7RN S568 95,3
Error in line 57: jpWp9YJy7RN A637 40,5
Error in line 52: ZLBz11a60dF S320 11,0
Error in line 62: Ngu A637 27,5
Error in line 64: N2WmU0HISZ S320 62,2
Error in line 83: jpWp9YJy7RN S320 10,6
Error in line 90: jpWp9YJy7RN A51 99,9
Error in line 96: Ngu S320 85,3
Error in line 103: ZLBz11a60dF A51 23,2
Error in line 104: H3Cv46q A51 5,7
Error in line 112: A51 A637 64,0
Error in line 120: jpWp9YJy7RN A637 23,35
Error in line 122: jpWp9YJy7RN A637 75,19
Error in line 107: ZLBz11a60dF S320 43,0
Error in line 117: jpWp9YJy7RN A637 23,5
Error in line 132: Ngu S568 29,9
Error in line 129: jpWp9YJy7RN S568 95,5
Error in line 139: YkK5pll S568 6,0
Error in line 138: H3Cv46q A51 36,9
Error in line 142: H3Cv46q S320 5,6
Error in line 135: jpWp9YJy7RN S320 37,6
Error in line 141: YkK5pll S320 0,1
Error in line 143: H3Cv46q S568 4,5
Error in line 150: N2WmU0HISZ S320 17,4
Error in line 165: jpWp9YJy7RN S568 62,9
Error in line 167: Ngu S568 56,7
Error in line 174: Ngu A637 76,1
Error in line 180: A51 S568 12,3
Error in line 181: Ngu S568 97,2
Error in line 160: H3Cv46q S320 78,5
Error in line 187: YkK5pll A51 49,5
Error in line 199: A51 A51 67,7
Error in line 197: YkK5pll A637 87,9
Error in line 210: H3Cv46q A637 93,1
Error in line 211: H3Cv46q S320 32,6
Error in line 212: H3Cv46q A637 14,9
Error in line 213: H3Cv46q S568 66,0
Error in line 232: N2WmU0HISZ A637 59,7
Error in line 220: jpWp9YJy7RN A637 99,4
Error in line 235: jpWp9YJy7RN S568 42,5
Error in line 242: A51 S568 159,3
